radio width fix on safari

--- a/src/assets/styles/03-elements/radio.scss
+++ b/src/assets/styles/03-elements/radio.scss
@@ -106,3 +106,7 @@
     }
   }
 }
+
+input[type=radio]{
+  @apply w-4; 
+}
